--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,4 @@ framework = arduino
 lib_deps = 
 	blynkkk/Blynk@^1.1.0
 	adafruit/Adafruit BMP280 Library@^2.6.2
-;	adafruit/Adafruit BME280 Library@^2.2.2
+	adafruit/Adafruit BME280 Library@^2.2.2
